--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
                 與小助手進行互動，小助手會從附近的商家開始尋找，並從中選擇一個符合需求的店家資訊！
             </p>
             <p>
-                交給我來幫你選擇該吃什麼吧！底下有我的QRcode，歡迎各位掃描並加我為好友！ 
+                交給我來幫你選擇該吃什麼吧！底下有我的QRcode，歡迎大家掃描並加我為好友！ 
             </p>
             <p>
                 <a href="/author" style="color: black;font-weight: bold; font-style: italic;">By:Hubert</a>
