--- a/templates/index.html
+++ b/templates/index.html
@@ -5,20 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About FoodSnolax</title>
-    <link rel="icon" href="{{ url_for('static', filename='img/Snolax.ico') }}" type="image/x-icon">
+    <link rel="icon" href="{{ url_for('static', filename='img/Snorlax.ico') }}" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 </head>
 <body>
-    <img src="{{ url_for('static', filename='img/Snolax.jpg')}}" alt="Snolax" id="bg-img">
+    <img src="{{ url_for('static', filename='img/Snorlax.jpg')}}" alt="Snolax" id="bg-img">
     <div class="card">
         <div class="content-title">
             <h1>關於我</h1>
         </div>
         <div class="content">
             <p>
-                哈囉！我是FoodSnolax小助手，是一個幫忙尋找附近餐廳的Line機器人
+                哈囉！我是FoodSnorlax小助手，是一個幫忙尋找附近餐廳的Line機器人
             </p>
             <p>
                 使用<label style="color: rgb(238, 48, 27);">Python結合Flask、Line-Bot-Sdk、Googlemaps API、Postgresql</label>開發而成
@@ -38,7 +38,7 @@
         </div>
         <div class="img"">
             <img src="{{ url_for('static', filename='img/QR.png')}}" alt="QRcode" style="height: 200px; width: 200px; margin-top: auto;">
-            <img src="{{ url_for('static', filename='img/SnolaxHello.png')}}" alt="Snolax" style="height: 256px; width: 256px;margin-top: auto;margin-left: 120px;">
+            <img src="{{ url_for('static', filename='img/SnorlaxHello.png')}}" alt="Snolax" style="height: 256px; width: 256px;margin-top: auto;margin-left: 120px;">
         </div>
     </div>
     <script>
