--- a/templates/author.html
+++ b/templates/author.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Author</title>
-    <link rel="icon" href="{{ url_for('static', filename='img/Snolax.ico') }}" type="image/x-icon">
+    <link rel="icon" href="{{ url_for('static', filename='img/Snorlax.ico') }}" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 </head>
 <body>
-    <img src="{{ url_for('static', filename='img/Snolax.jpg')}}" alt="Snolax" id="bg-img">
+    <img src="{{ url_for('static', filename='img/Snorlax.jpg')}}" alt="Snolax" id="bg-img">
     <div class="card">
         <div class="content-title">
             <h1>About author</h1>
